testsuite/tests/parser/should_fail/pfail043.alan
hello() : proc
{
  if(true & 3)
    return;
}
