testsuite/tests/parser/should_fail/pfail043.stderr
pfail043.alan:3:14: Error: Parse error on input `)'

